Fixed layout issue related to height

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
   background-color: #DC0A2D;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
